# mlt

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  justfile  pyproject.toml  slide-generation.md  tests.py
.codex/: AGENTS.md
.github/workflows/: ci-pipeline.yml  run-static-checks.yml  run-tests.yml
decks/example-deck/: deck.yml  manuscript.md  slides.md
decks/macos-defaults-plist/: custom.css  default.css  manuscript.md  slides.md  theme.css
layouts/business/: cost-structure.md
layouts/closing/: summary-closing.md
layouts/execution/: roadmap.md
layouts/intro/: cover.md
layouts/problem-solution/: concept-key-idea.md  problem-highlight.md  solution-overview.md
layouts/profile/: visual-profile.md
layouts/proof/: capability.md  use-cases-by-segment.md
src/: __init__.py  cli.py  error.rs  lib.rs  main.py  main.rs  prompt.md  script.md  theme.css
src/app/: context.rs  create.rs  list.rs  mod.rs  run.rs
src/assets/: custom.css  default.css  manuscript.md.tpl  slides.md.tpl  theme.css  theme.css.tpl
src/cli/: convert.rs  decks.rs  export.rs  mod.rs
src/conversion/: __init__.py  marp_exporter.py
src/deck_layout/: mod.rs
src/deck_management/: __init__.py  deck_definition.py  deck_locator.py  deck_paths.py
src/marp/: exporter.rs  format.rs  mod.rs
src/theme/: mod.rs
src/workspace/: catalog.rs  manifest.rs  mod.rs  resolver.rs  scaffold.rs
tests/: cli.rs  library.rs  test_deck_locator.py  test_marp_exporter.py
tests/cli/: create.rs  decks.rs  help_and_version.rs  list.rs  run.rs  run_fixture_integration.rs  (+1 more)
(+28 files in other folders)
