[package]
name = "marp-pj"
version = "0.1.0"
edition = "2021"
description = "Local CLI for managing Marp decks and exports"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
